all requested changes